# Magma-Term

./: .gitignore  LICENSE.md  Makefile  README.md  compile_flags.txt  meson.build  meson_options.txt
includes/magma/: font.h  vt.h
includes/magma/backend/: backend.h  drm.h  wl.h  xcb.h
includes/magma/logger/: log.h
includes/magma/private/backend/: backend.h  wl.h
includes/magma/private/renderer/: vk.h
includes/magma/renderer/: vk.h
shaders/: vert.spv
src/: font.c  magma.c  main.c  vt.c
src/backend/: backend.c  drm.c  wl.c  xcb.c
src/backend/wl/: input.c  wl.c
src/logger/: log.c
src/renderer/: vk.c
src/renderer/vk/: allocator.c  command_buffers.c  device.c  images.c  instance.c  pipeline.c  vk.c
